@@ -12,6 +12,7 @@
 - fixed URL downloading templates in `TEMPLATE()` method
 - fixed parsing of unpaired elements in HTMLParser
 - added support for `log` extension in static file processing
+- fixed selectors in the HTMLParser
 
 ========================
 0.0.7
